# reddit-engage

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml
.audit/: issues.md
.bmad-board/: refs.json  refs.yml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: stop-task-gate.sh
.claude/skills/: bmad-dev  bmad-qa  bmad-sm
_bmad/: config.toml  config.user.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
assets/: hero-shotlist.md  render_hero.py  render_social.py  render_workflow.py
config/: blog-map.yml  keywords-build-vs-buy.yml  keywords-churn.yml  keywords-pricing-rage.yml  keywords-resurrect.yml  keywords-rfp-bait.yml  keywords-rivals.yml  keywords-stack-audit.yml  keywords.yml  notion.yml  notion.yml.example  subreddits.yml  weights.yml
docs/: QA-plan.md  setup-notion.md  setup-oauth.md
docs/stories/: p-1.1.1-install-bmad-method.md  p-1.1.2-github-project-fields.md  p-1.1.3-generate-story-files.md  p-1.1.4-bulk-file-issues.md  p-1.1.5-write-claude-md.md  p-1.1.6-stop-hook-wiring.md  p-1.1.7-smoke-test-flow.md  p0.0.1-claude-plugin-manifest.md  p0.0.2-restructure-engine.md  p0.0.3-xdg-paths.md  p0.0.4-skills-restructure.md  p0.0.5-sqlite-migration-script.md  p0.0.6-readme-skeleton.md  p0.0.7-phase0-smoke.md  p1.1.1-praw-oauth-wrapper.md  p1.1.2-oauth-config-walkthrough.md  p1.1.3-sub-quarantine-logic.md  p1.1.4-sub-list-prune.md  p1.1.5-author-vetting.md  p1.1.6-score-multiplier-safety.md  p1.1.7-ab-smoke-test.md  p2.2.1-classify-abstraction.md  p2.2.2-classify-prompt.md  p2.2.3-classifier-gate-wiring.md  p2.2.4-sqlite-vec-install.md  p2.2.5-dedup-embeddings.md  p2.2.6-cooling-queue.md  p2.2.7-tier-b-smoke.md  p3.3.1-mode-flag.md  p3.3.10-pattern-column-notion.md  p3.3.2-stack-audit-pattern.md  p3.3.3-churn-signals-pattern.md  p3.3.4-pricing-rage-pattern.md  p3.3.5-build-vs-buy-pattern.md  p3.3.6-rfp-bait-pattern.md  p3.3.7-resurrect-pattern.md  p3.3.8-rivals-pattern.md  p3.3.9-op-vet-utility.md  p4.4.1-notion-schema-migration.md  p4.4.2-notion-views.md  (+23 more)
engine/reddit_engage/: cli.py
engine/reddit_engage/lib/: archetype_map.py  classify.py  dedup_vec.py  obsidian_sync.py  onboard_synth.py  postmortem.py  profile_synth.py  reddit_oauth.py  score.py  store.py  tune_engine.py
engine/reddit_engage/prompts/: classify.md  profile_research.md
engine/scripts/: migrate_to_xdg.py  notion_admin.py  notion_migrate.py  notion_setup.py  write_dataforseo_config.py  write_firecrawl_config.py  write_notion_config.py  write_oauth.py  write_slack_config.py  write_surface_config.py
engine/subscope/: cli.py
engine/subscope/lib/: archetype_map.py  author_vet.py  classify.py  discover.py  enrich.py  net.py  obsidian_sync.py  output.py  postmortem.py  profile_synth.py  reddit.py  reddit_oauth.py  reddit_public.py  score.py  slack.py  store.py  tune_engine.py
engine/subseek/: cli.py
engine/subseek/lib/: archetype_map.py  author_vet.py  classify.py  obsidian_sync.py  output.py  profile_synth.py  reddit_oauth.py  reddit_public.py  slack.py  store.py  tune_engine.py
engine/subseek/prompts/: profile_synth.md
engine/tests/: test_author_vet.py  test_authority.py  test_authority_lazy_vet.py  test_authority_select.py  test_candidates.py  test_canonical.py  test_classify.py  test_cli_rate_limit.py  test_cooling_queue.py  test_dataforseo_client.py  test_dedup_vec.py  test_discover.py  test_dual_track_e2e.py  test_enrich_core.py  test_enrich_pipeline.py  test_enrich_smoke.py  test_enrich_status.py  test_enrich_store.py  test_firecrawl_client.py  test_no_em_dashes.py  test_no_oauth_suggestion.py  test_obsidian_sync.py  test_onboard_synth.py  test_output_table.py  test_postmortem.py  test_profile_synth.py  test_reddit.py  test_reddit_fallback.py  test_reddit_oauth.py  test_score.py  test_select_daily.py  test_tune_engine.py
presets/: agency-owner.yml  b2b-saas-founder.yml  consultant.yml  indie-hacker.yml
scripts/: plan_to_stories.py  reddit_engage.py
scripts/lib/: blog_extractor.py  output.py  reddit_public.py  score.py  store.py
skills/build-vs-buy/: SKILL.md
skills/churn/: SKILL.md
skills/judge/: SKILL.md
skills/onboard/: SKILL.md
skills/op-vet/: SKILL.md
skills/postmortem/: SKILL.md
skills/pricing-rage/: SKILL.md
skills/profile/: SKILL.md
skills/pulse/: SKILL.md
skills/resurrect/: SKILL.md
skills/rfp-bait/: SKILL.md
skills/rivals/: SKILL.md
skills/run/: SKILL.md
skills/setup/: SKILL.md
skills/stack-audit/: SKILL.md
skills/tune/: SKILL.md
tests/: test_canonical.py  test_no_em_dashes.py  test_score.py
tests/fixtures/: reddit_response.json
