[project]
name = "subseek"
version = "0.1.0"
description = "Daily subreddit scanner: surfaces pain-pattern posts (pricing rage, churn, build-vs-buy, alternative-seeking) inside your Claude Code session. Pattern-aware, human-in-the-loop, closed-loop learner from your own sent replies."
authors = [{ name = "Dan Colta" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["reddit", "subreddit-scanner", "pain-patterns", "social-listening", "claude-code", "claude-code-plugin", "human-in-the-loop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "certifi>=2024.7.4",
]

[project.optional-dependencies]
# Provider-agnostic LLM via OpenAI-compatible client.
# Works with: OpenAI, Anthropic (/openai/v1), Groq, OpenRouter, Together,
# Fireworks, Anyscale, local Ollama, any OpenAI-compatible endpoint.
llm = ["openai>=1.30.0,<2.0"]
# OAuth + identity scope for Reddit
reddit = ["praw>=7.7.0,<8.0"]
# Notion daily-triage sync
notion = ["notion-client>=2.2.0,<3.0"]
# Dev / test
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
]

[project.scripts]
subseek = "subseek.cli:main"

[project.urls]
Homepage = "https://github.com/dancolta/subseek"
Repository = "https://github.com/dancolta/subseek"
Issues = "https://github.com/users/dancolta/projects/7"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["engine"]
include = ["subseek*"]

[tool.pytest.ini_options]
testpaths = ["engine/tests"]
pythonpath = ["engine"]

[tool.ruff]
line-length = 100
target-version = "py310"
